# agent-sight-windows

./: .gitignore  AGENTS.md  CHANGELOG.en.md  CHANGELOG.md  CONTRIBUTING.en.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.en.md  MAINTAINERS.md  PRIVACY.en.md  PRIVACY.md  README.en.md  README.md  SECURITY.en.md  SECURITY.md  THIRD-PARTY-NOTICES.en.md  THIRD-PARTY-NOTICES.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  tests.yml
docs/: HERMES_ONBOARDING.md  SCREEN_LOOK_DO_PROTOCOL.md  agentsight-1.0.0-public-architecture.en.md  agentsight-1.0.0-public-architecture.md  branding-and-workspace-migration.en.md  branding-and-workspace-migration.md  github-launch-checklist.en.md  github-launch-checklist.md  release-checklist.en.md  release-checklist.md  release-notes-template.en.md  release-notes-template.md  release-notes-v1.0.0.en.md  release-notes-v1.0.0.md  release-notes-v1.0.1.md  repository-profile.en.md  repository-profile.md  user-guide.en.md  user-guide.md  visual-memory-and-attention.en.md  visual-memory-and-attention.md
docs/segments/: AGENTSIGHT_SEGMENT_V1_SPEC.md
packaging/pyinstaller/: AIControlHostAgent.spec  AIControlHostAgentInstaller.spec  AIControlHostAgentScenarios.spec  AIControlInstaller.spec  AIControlSessionSupervisor.spec  AIControlTray.spec  AIControlTrayGui.spec  AgentSightHostAgent.spec  AgentSightHostAgentInstaller.spec  AgentSightHostAgentScenarios.spec  AgentSightMcpServer.spec  AgentSightSetup.spec  AgentSightSupervisor.spec  AgentSightTimelineViewer.spec  AgentSightTray.spec  AgentSightTrayCli.spec
src/agentsight/: __init__.py  caller_lock.py  gateway.py  installer.py  operator_notifications.py  operator_workflow.py  prompt_inbox.py  session_supervisor.py  storage_quota.py
src/agentsight/adapters/: local_cli.py  local_client.py  session.py
src/agentsight/channels/: __init__.py  base.py  defaults.py  dry_run_input.py  keyboard_events.py  mock.py  mss_capture.py  pillow_imagegrab.py  pointer_events.py  registry.py  windows_capture.py
src/agentsight/diagnostics/: __init__.py  attention_sync_value.py  capture.py  capture_cli.py  capture_smoke.py  capture_smoke_cli.py  first_use_doctor.py  first_use_doctor_cli.py  input.py  input_smoke.py  input_smoke_cli.py  p0_real_input_closed_loop.py  p0_real_input_closed_loop_cli.py  release_readiness.py
src/agentsight/evidence/: sequence_artifacts.py  store.py
src/agentsight/failure/: service.py
src/agentsight/host_agent/: __init__.py  installer.py  interactive_task.py  scenarios.py  server.py  service_state.py
src/agentsight/protocol/: schemas.py
src/agentsight/segments/: __init__.py  binary_container.py  decoder.py  decoder_cli.py  global_index.py  mkv_container.py  reader.py  recorder.py  retention.py  review.py  writer.py
src/agentsight/tray/: __init__.py  actions.py  ai_status.py  cli.py  gui.py  hotkey.py  state.py  timeline_viewer.py  viewers.py
src/ai_control/: __init__.py  caller_lock.py  capture_quality.py  gateway.py  installer.py  operator_notifications.py  operator_workflow.py  prompt_inbox.py  runtime_platform.py  session_supervisor.py  storage_quota.py
tests/acceptance/: AGENTSIGHT_HISTORICAL_FAILURE_REGRESSION_CHECKLIST.md  test_agent_sight_qa_regressions_t22845b98.py  test_caller_lock.py  test_historical_failure_regressions.py  test_host_agent_scenarios.py  test_mkv_segment_storage.py  test_p1g_tray_gui_control_surface.py  test_p1x_session_supervisor.py  test_p3a_screen_look_do_protocol.py  test_packaging_round7.py  test_pf0_agentsight_segment_v1_spec.py  test_pf1_agentsight_segment_writer_reader.py  test_pf2_idle_capture_and_rotation.py  test_pf2_segment_capture_integration.py  test_pf3_segment_aware_frame_index.py
tests/fault_injection/: __init__.py
tests/fixtures/: agent_sight_grid_drill.html
tools/: build_host_agent_exe.py  run_agent_sight_grid_drill.py  run_agent_sight_human_command_pool_20.py  run_mkv_quota_qa_matrix_t_829ee81f.py
tools/real_gui_blind_lab/: agent_sight_human_command_pool_20.html  agent_sight_integrated_30_lab.html  agent_sight_real_gui_lab.html
(+95 files in other folders)
