[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsight"
version = "1.0.0"
description = "A pixel-grounded observe-and-act host for Windows AI agents."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
capture-mss = ["mss"]
capture-pillow = ["Pillow"]
capture-windows-capture = ["windows-capture"]
windows-capture = ["mss", "Pillow", "windows-capture"]
packaging-exe = ["pyinstaller", "PySide6"]

[project.scripts]
agentsight-cli = "agentsight.adapters.local_cli:main"
agentsight-mcp = "agentsight.adapters.mcp.server:main"
agentsight-capture-diagnostics = "agentsight.diagnostics.capture_cli:main"
agentsight-capture-probe = "agentsight.diagnostics.capture_cli:main"
agentsight-capture-smoke = "agentsight.diagnostics.capture_smoke_cli:main"
agentsight-first-use-doctor = "agentsight.diagnostics.first_use_doctor_cli:main"
agentsight-input-smoke = "agentsight.diagnostics.input_smoke_cli:main"
agentsight-p0-real-input-smoke = "agentsight.diagnostics.p0_real_input_closed_loop_cli:main"
agentsight-attention-sync-proof = "agentsight.diagnostics.attention_sync_value:main"
agentsight-release-readiness = "agentsight.diagnostics.release_readiness:main"
agentsight-installer = "agentsight.installer:main"
agentsight-host-agent = "agentsight.host_agent.server:main"
agentsight-host-agent-scenarios = "agentsight.host_agent.scenarios:main"
agentsight-host-agent-installer = "agentsight.host_agent.installer:main"
agentsight-session-supervisor = "agentsight.session_supervisor:main"
agentsight-tray = "agentsight.tray.cli:main"
agentsight-tray-gui = "agentsight.tray.gui:main"
agentsight-segment-decoder = "agentsight.segments.decoder_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["agentsight*"]

[tool.setuptools.package-data]
"agentsight.adapters.skill" = ["SKILL.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
